[gd_scene load_steps=18 format=2]

[ext_resource path="res://Boss/BigBusiness/BIG_BUSINESS.png" type="Texture" id=1]
[ext_resource path="res://Boss/BigBusiness/BigBusiness.gd" type="Script" id=2]
[ext_resource path="res://Player/Hurtbox.gd" type="Script" id=3]
[ext_resource path="res://Mobs/hit_flash_shader.tres" type="Material" id=4]
[ext_resource path="res://Boss/DemoBoss/boss_hitbox.gd" type="Script" id=5]
[ext_resource path="res://Towers/!Resources/Hitbox.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 5.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:intro_anim_lerp")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "charge"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2, 1, 2, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 3 ],
"method": "change_state"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "death"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ Vector2( 5, 0 ) ],
"method": "set_offset"
}, {
"args": [ Vector2( 7, 0 ) ],
"method": "set_offset"
}, {
"args": [ Vector2( 14, 4 ) ],
"method": "set_offset"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "intro"
length = 2.9
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:intro_anim_lerp")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "jog"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 3 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 14.5

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 3 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 8.0
height = 10.0

[sub_resource type="CircleShape2D" id=11]
radius = 14.0

[node name="BigBusiness" type="KinematicBody2D"]
script = ExtResource( 2 )
max_health = 800.0
boss_name = "Big Business"
intro_anim_lerp = 1.0

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
position = Vector2( -4, -16 )
texture = ExtResource( 1 )
offset = Vector2( 4, 0 )
hframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/charge = SubResource( 9 )
anims/death = SubResource( 8 )
anims/idle = SubResource( 1 )
anims/intro = SubResource( 7 )
anims/jog = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -19 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -3 )
shape = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[node name="JogHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource( 5 )
time_between_hits = 0.25
damage = 25.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="JogHitbox"]
position = Vector2( 0, -16 )
shape = SubResource( 10 )

[node name="ChargeHitbox" type="Area2D" parent="."]
script = ExtResource( 6 )
damage = 27.0
hit_mobs = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargeHitbox"]
position = Vector2( 0, -18 )
shape = SubResource( 11 )

[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]
